mongo-db-deployment.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db-deploy
spec:
  replicas: 1
  serviceName: mongo-db
  selector:
    matchLabels:
      app: mongo-db-deploy
  template:
    metadata:
      labels:
        app: mongo-db-deploy
    spec:
      containers:
      - name: mongo-db-deploy
        image: mongo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-db-data
          mountPath: "/data/db"
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
      volumes:
      - name: mongo-db-data
        persistentVolumeClaim:
          claimName: mongo-db-persistent-volume-claim


---

apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  selector:
    app: mongo-db-deploy
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
