mongo-express-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-deploy
  template:
    metadata:
      labels:
        app: mongo-express-deploy
    spec:
      containers:
      - name: mongo-express-deploy
        image: mongo-express:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
          limits:
            cpu: "1000m"
            memory: "1000Mi"


---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express-deploy
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
