ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  tls:
  - hosts:
    - mongoexpress.deepakdev.live
    - grafana.deepakdev.live
    secretName: mongo-express-cert-key
  rules:  
    - host: mongoexpress.deepakdev.live
      http:
        paths:
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: mongo-express-service
              port: 
                number: 8081
    - host: grafana.deepakdev.live
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana
              port: 
                number: 80
